# auto-llm-predictor

./: .gitignore  README.md  pyproject.toml
src/auto_llm_predictor/: __init__.py  checkpoint.py  graph.py  main.py  state.py  utils.py  webui.py
src/auto_llm_predictor/nodes/: balance.py  codegen.py  config.py  evaluate.py  execute.py  explore.py  feature_selection.py  finetune.py  plan.py  predict.py  review.py  split.py  verify.py
src/auto_llm_predictor/prompts/: __init__.py  balance.py  codegen.py  explore.py  plan.py  verify.py
src/auto_llm_predictor/static/: app.js  index.html  style.css
tests/: test_robustness.py
